# dbt_dummy_project

./: .gitignore  .mise.toml  README.md  dbt_project.yml  dbtcompile.py  dbtcompile.sh  packages.yml  postgres_data.sql  pyproject.toml
models/marts/core/: foo.sql
models/staging/food_store/: food_store.yml
